# blog-py

./: .env  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
backend/: pyproject.toml
backend/config/: .env.example
backend/src/: main.py
backend/src/api/v1/: api.py  users.py
backend/src/api/v1/endpoints/: users.py
backend/src/core/: config.py  exceptions.py  handlers.py
backend/src/db/: init_db.py  session.py
backend/src/models/: user.py
backend/src/schemas/: user.py
backend/tests/: test_db.py
docker/compose/: docker-compose.yml
docs/: README.md
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  index.ts  user.ts
frontend/src/api/modules/: auth.ts
frontend/src/constants/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: main.scss
frontend/src/types/: element-plus.d.ts  index.ts  response.ts  user.ts
frontend/src/utils/: request.ts
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
frontend/src/views/dashboard/: DashboardView.vue
src/: config.py  main.py
src/api/v1/: users.py
src/tests/: test_db.py
