[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["kr1ston <13615153@qq.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"
alembic = "^1.14.0"
pydantic-settings = "^2.7.1"
pymysql = "^1.1.1"
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
